--- a/main.css
+++ b/main.css
@@ -1,24 +1,24 @@
-.top{
+nav {
     background: #2d0142;
 }
 
-.project h2, .project span, .project img{
+.project h2, .project span, .project img {
     display: inline;
 }
 
-.project span{
+.project span {
     font-weight: bold;
 }
 
-.project p, .project a{
+.project p, .links {
     display: block;
 }
 
-.project a{
+.project a {
     width: 200px;
 }
 
-footer{
+footer {
     overflow: hidden;
     background: #000000;
     padding: 20px;
@@ -26,11 +26,11 @@ footer{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#about{
+#about {
     width: 70%;
 }
 
-#contact{
+aside {
     float: right;
 }
 
