--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 nav {
-    background: #2d0142;
+    background: #00283d;
 }
 
 .project h2, .project span, .project img {
@@ -20,18 +20,28 @@ nav {
 
 footer {
     overflow: hidden;
-    background: #000000;
+    background-color: #ededed;
     padding: 20px;
-    color: #ffffff;
+    color: #363636;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 #about {
-    width: 70%;
+    width: 95%;
 }
 
 aside {
     float: right;
+}
+
+@media only screen and (min-width: 768px) {
+    #about{
+        width: 70%;
+    }
+    aside {
+        display: block;
+        margin: 0 auto;
+    }
 }
 
 .modal {
