--- a/main.css
+++ b/main.css
@@ -18,6 +18,14 @@ nav {
     width: 200px;
 }
 
+.screenshot, .links {
+    text-align: center;
+}
+
+.screenshot img {
+    cursor: pointer;
+}
+
 footer {
     overflow: hidden;
     background-color: #ededed;
@@ -30,37 +38,26 @@ footer {
     width: 95%;
 }
 
-aside {
+#contact {
     float: right;
 }
 
-@media only screen and (min-width: 768px) {
-    #about{
-        width: 70%;
-    }
-    aside {
-        display: block;
-        margin: 0 auto;
-    }
-}
-
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1000000; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 1000000;
     padding: 25px;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: #000000; /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #000000;
+    background-color: rgba(0,0,0,0.6);
 }
 
 .modal-content {
     margin: auto;
     display: block;
-    width: 90%;
-    max-width: 800px;
+    width: 95%;
   }
 
 .close {
@@ -70,3 +67,13 @@ aside {
     color: #f1f1f1;
     transition: 0.3s;
   }
+
+@media only screen and (min-width: 768px) {
+    #about{
+        width: 70%;
+    }
+
+    .modal-content {
+        width: 90%;
+      }
+}
