--- a/style.css
+++ b/style.css
@@ -114,49 +114,52 @@ a:hover {
     width: 100%;
     height: auto;
     grid-template-columns: 55% 45%;
-    grid-template-rows: 20% 30% 20% 30%;
-}
-
-.project-item h2 {
-    grid-column: 1 / 2;
-    grid-row: 1/ 2;
-    align-self: center;
+    grid-template-rows: 100%;
 }
 
 .project-item p {
-    grid-column: 1 / 2;
-    grid-row: 2/ 3;
-    margin-top: 0;
-    align-self: center;
+    margin-right: 10px;
+    margin-bottom: 30px;
 }
 
-
-
-.project-item ul img {
-    width: 50px;
-    height: 50px;
-}
-
-.project-item img {
-    width: 580px;
-    height: 360px;
-    margin: 0 auto;
-    padding: 10px;
-    grid-column: 2 / 3;
-    grid-row: 1 / 5;
-}
 
 .project-item ul {
-    margin: 0;
-    padding: 0;
-    grid-column: 1 / 2;
-    grid-row: 3/ 4;
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+.project-item li {
+    margin-right: 10px;
+    display: inline;
+    float: left;
 }
 
-.project-item li {
+.project-item li img {
+    width: 40px;
+    height: 40px;
     display: inline;
-    margin: 0;
-    padding: 0;
+}
+
+.project-image {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    text-align: center;
+}
+
+.project-screenshot {
+    width: 580px;
+    height: 360px;
+    margin: 10px auto;
+}
+
+.skills-highlight {
+    background-color: #046eb5;
+    color: #FFF;
+    font-weight: bold;
+    text-align: center;
+    padding: 10px;
+    border-radius: 15px;
+    width: 100px;
 }
 
 footer {
@@ -165,14 +168,12 @@ footer {
 }
 
 @media (max-width: 1400px) {
-    #projects h1 {
-        margin-bottom: 0;
-    }
+    
     .project-item {
         grid-template-columns: 50% 50%;
     }
 
-    .project-item img {
+    .project-screenshot {
         width: 540px;
         height: 340px;
     }
@@ -184,29 +185,16 @@ footer {
     .project-item {
         grid-template-rows: auto;
     }
-    .project-item h2 {
+
+    .project-description {
         grid-column: 1 / 3;
         grid-row: 1 / 2;
-        margin-bottom:  0;
+        margin-bottom: 20px;
     }
     
-    .project-item p {
+    .project-image {
         grid-column: 1 / 3;
         grid-row: 2 / 3;
-        margin-top: 20px;
-    }
-    
-    .project-item img {
-        width: 580px;
-        height: 360px;
-        margin: 10px auto;
-        grid-column: 1 / 3;
-        grid-row: 4 / 5;
-    }
-
-    .project-item ul {
-        grid-column: 1 / 3;
-        grid-row: 3/ 4;
     }
 
 }
@@ -239,7 +227,7 @@ footer {
 
 @media (max-width: 500px) {
     header h1 {
-        display: none;
+        font-size: 20px;
     }
     .project-item img {
         width: 380px;
