--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 #main-container {
     width: 95%;
     margin: auto;
+    min-height: 90vh;
 }
 
 header {
@@ -164,6 +165,7 @@ a:hover {
 
 footer {
     width: 100%;
+    font-size: 14px;
     text-align: center;
 }
 
