--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     word-spacing: normal;
     background-color: #FFF;
     color: #000;
-    font-family: 'Andale Mono', Consolas, 'Lucida Console';
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -36,7 +36,7 @@ header img, #intro img {
 
 header h1 {
     font-size: 30px;
-    word-spacing: -10px;
+    word-spacing: 1px;
 
 }
 
@@ -75,7 +75,7 @@ a:hover {
     flex: 5;
     padding: 10px 20px 20px 10px;
     border-right: solid 2px #8a8a8a;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 #about img {
@@ -94,7 +94,7 @@ a:hover {
 #skills li {
     list-style: none;
     padding: 5px 5px 15px 10px;
-    font-size: 20px;
+    font-size: 22px;
     width: 80%;
     margin:auto;
 }
@@ -121,6 +121,7 @@ a:hover {
 .project-item p {
     margin-right: 10px;
     margin-bottom: 30px;
+    font-size: 18px;
 }
 
 
@@ -232,7 +233,7 @@ footer {
         font-size: 20px;
     }
     .project-item img {
-        width: 380px;
-        height: 240px;
+        width: 360px;
+        height: 220px;
     }
   }
