--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ footer {
         text-align: center;
     }
 
-    .project-item img {
+    .project-screenshot {
         width: 460px;
         height: 300px;
     } 
@@ -232,7 +232,15 @@ footer {
     header h1 {
         font-size: 20px;
     }
-    .project-item img {
+    .project-screenshot {
+        width: 360px;
+        height: 220px;
+    }
+  }
+
+  @media (max-width: 320px) {
+
+    .project-screenshot {
         width: 360px;
         height: 220px;
     }
